<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">环保千里眼</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="user_name">帐号</string>
    <string name="password">密码</string>

    <dimen name="login_textsize">15dp</dimen>

    <string name="bt_login">立即登录</string>

    <dimen name="login_button_textsize">18dp</dimen>

    <string name="title_activity_main_tab">MainTabActivity</string>
    <string name="hxdb">横向对比</string>
    <string name="jcxq">监测详情</string>
    <string name="tjfx">统计分析</string>
    <string name="set_up">设置</string>
    <string name="title_activity_hxdb">HxdbActivity</string>
    <string name="title_activity_jcxq">JcxqActivity</string>
    <string name="title_activity_tjfx">TjfxActivity</string>
    <string name="title_activity_setup">SetupActivity</string>
    <string name="goback">&lt;返回</string>
    <string name="hengxiangduibi">横向对比</string>
    <string name="title_activity_map_overview">MapOverviewActivity</string>
    <string name="title_activity_hxdb_tab">HxdbTabActivity</string>
    <string name="dtgl">地图概览</string>
    <string name="qxdb">曲线对比</string>
    <string name="sjdb">数据对比</string>
    <string name="title_activity_data_contrast">DataContrastActivity</string>
    <string name="title_activity_curve_contrast">CurveContrastActivity</string>
    <string name="realtime_data">实时数据</string>
    <string name="hour_data">小时数据</string>
    <string name="jiancexiangqing">监测详情</string>
    <string name="title_activity_spot_info_tab">SpotInfoTabActivity</string>
    <string name="jcdxx">监测点信息</string>
    <string name="zpzp">抓拍照片</string>
    <string name="qxbh">曲线变化</string>
    <string name="title_activity_curve_change">CurveChangeActivity</string>
    <string name="title_activity_capture_photo">CapturePhotoActivity</string>
    <string name="capture_photo">抓拍照片</string>
    <string name="shijian">时间</string>
    <string name="pm2_5">pm2.5</string>
    <string name="pm10">pm10</string>
    <string name="zaosheng">噪声db(A)</string>
    <string name="title_activity_tjfx_tab">TjfxTabActivity</string>
    <string name="klwyb">颗粒物月报</string>
    <string name="yjzs">夜间噪声</string>
    <string name="zsfb">噪声分布</string>
    <string name="klwfb">颗粒物分布</string>
    <string name="title_activity_pm10_monthly_report">Pm10MonthlyReportActivity</string>
    <string name="title_activity_night_noise">NightNoiseActivity</string>
    <string name="title_activity_night_noise_distribution">NightNoiseDistributionActivity</string>
    <string name="title_activity_pm10_distribution">Pm10DistributionActivity</string>
    <string name="jizhumima">记住密码</string>
    <string name="kaishiriqi">开始日期</string>
    <string name="jieshuriqi">结束日期</string>
    <string name="xuanzekaishiriqi">选择开始日期</string>
    <string name="xuanzekaishiyuefen">选择开始月份</string>
    <string name="xuanzejieshuriqi">选择结束日期</string>
    <string name="query">查询</string>
    <string name="jiancedidian">监测地点</string>
    <string name="zaoshengchaobiaolv">噪声超标率(%)</string>
    <string name="quantian">全天</string>
    <string name="baitian">白天</string>
    <string name="yejian">夜间</string>
    <string name="jianceleixing">监测类型</string>
    <string name="title_activity_video">VideoActivity</string>
    <string name="spzp">视频抓拍</string>
    <string name="cloud_ctrl">云控制</string>
    <string name="start_ctrl">开始云控制</string>
    <string name="stop_ctrl">结束云控制</string>
    <string name="title_activity_kqzl">KqzlActivity</string>
    <string name="title_activity_zdwry">ZdwryActivity</string>
    <string name="kqzlfbt">空气质量分布图</string>
    <string name="title_activity_station_details">StationDetailsActivity</string>
    <string name="shishiaqixiangqing">实时AQI详情</string>
    <string name="aqizhishu">AQI指数：</string>
    <string name="kongqizhiliangjibie">空气质量级别：</string>
    <string name="shouyaowuranwu">首要污染物：</string>
    <string name="jiankangzhiyin">健康指引：</string>
    <string name="jianyicuoshi">建议措施：</string>
    <string name="jianceshijian">监测时间：</string>
    <string name="wryfbt">污染源分布图</string>
    <string name="title_activity_wry_details">WryDetailsActivity</string>
    <string name="wuranyuanxiangqing">污染源详情</string>
    <string name="jiancexiangmu">检测项目：</string>
    <string name="shujulaiyuan">数据来源：重庆市江北区环境监测站</string>
    <string name="shouyaowuranwuleixing">首要污染物类型</string>
    <string name="pm2_5_unit">PM2.5(μg/m³)</string>
    <string name="pm10_unit">PM10(μg/m³)</string>
    <string name="shipinzhibo">视频直播</string>
    <string name="shipinhuifang">视频回放</string>
    <!-- <string name="ServerURL">http://cq.hbjk.com.cn:8081/restfulServer/rest/</string> -->
    <!-- <string name="applistURL">http://applist.hbjk.com.cn:8806/</string> -->
    <!-- <string name="ServerURL">%1$s</string> -->
    <string name="spot_video">监测点视频</string>
    <string name="title_activity_spot_video">SpotVideoActivity</string>
    <string name="title_activity_surface_water_tab">SurfaceWaterTabActivity</string>
    <string name="title_activity_surface_water_map">SurfaceWaterMapActivity</string>
    <string name="title_activity_surface_water_details">SurfaceWaterDetailsActivity</string>
    <string name="title_activity_surface_water_curve">SurfaceWaterCurveActivity</string>
    <string name="dbsjcqk">地表水监测情况</string>
    <string name="dbsxq">地表水详情</string>
    <string name="title_activity_sewage_tab">SewageTabActivity</string>
    <string name="title_activity_sewage_map">SewageMapActivity</string>
    <string name="title_activity_sewage_details">SewageDetailsActivity</string>
    <string name="title_activity_sewage_curve">SewageCurveActivity</string>
    <string name="wsclcqk">污水处理厂情况</string>
    <string name="wsclcxq">污水处理厂详情</string>
    <string name="dbsqxbh">地表水曲线变化</string>
    <string name="wsclcqxbh">污水处理厂曲线变化</string>
    <string name="title_activity_spot_video_tab">SpotVideoTabActivity</string>
    <string name="huikan">回看</string>
    <string name="zhibo">直播</string>
    <string name="zhuapai">抓拍</string>
    <string name="title_activity_video_live">VideoLiveActivity</string>
    <string name="title_activity_video_playback">VideoPlaybackActivity</string>
    <string name="title_activity_video_capture">VideoCaptureActivity</string>
    <string name="liebiao">列表&gt;</string>
    <string name="title_activity_wuhan_main">WuhanMainActivity</string>
    <string name="title_activity_new_spot_details">NewSpotDetailsActivity</string>
    <string name="title_activity_spot_rank">SpotRankActivity</string>
    <string name="title_activity_road_rank">RoadRankActivity</string>
    <string name="title_activity_homepage">HomepageActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_wuhan_csite_map">WuhanCsiteMapActivity</string>
    <string name="title_activity_wuhan_statistics">WuhanStatisticsActivity</string>
    <string name="title_activity_wuhan_yunwei">WuhanYunweiActivity</string>
    <string name="title_activity_wuhan_station_map">WuhanStationMapActivity</string>
    <string name="title_activity_station_curve_change">StationCurveChangeActivity</string>
    <string name="title_activity_zurve_change">ZurveChangeActivity</string>
    <string name="title_activity_wuhan_yunwei_baogao">WuhanYunweiBaogaoActivity</string>
    <string name="title_activity_wuhan_duban">WuhanDubanActivity</string>
    <string name="title_activity_wuhan_duban_details">WuhanDubanDetailsActivity</string>
    <string name="title_activity_wuhan_complaint">WuhanComplaintActivity</string>
    <string name="title_activity_wuhan_complaint_details">WuhanComplaintDetailsActivity</string>
    <string name="title_activity_new_spot_penlin">NewSpotPenlinActivity</string>

</resources>
