<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="@dimen/tight_height_size"
        android:background="@color/icon_blue"
        android:orientation="horizontal">
        <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="left"
            android:id="@+id/sjdb_goback"
            android:text="@string/goback"
            android:textSize="@dimen/top_tab_font_size"
            android:textColor="@color/white"
            android:background="@android:color/transparent"/>
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sjdb"
            android:textColor="@color/white"
            android:textSize="@dimen/top_tab_font_size"/>
        <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="right"
            android:text="@string/goback"
            android:textSize="@dimen/top_tab_font_size"
            android:textColor="@color/icon_blue"
            android:background="@android:color/transparent"/>
    </LinearLayout>

    <RadioGroup android:gravity="center_vertical" android:orientation="horizontal" android:id="@+id/data_contrast_radio" android:background="@drawable/maintab_toolbar_bg" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <RadioButton  android:id="@+id/data_contrast_realtime_data" android:layout_marginTop="2.0dip" android:text="@string/realtime_data" style="@style/main_tab_bottom" android:checked="true" android:textSize="16sp"/>
        <RadioButton  android:id="@+id/data_contrast_hour_data" android:layout_marginTop="2.0dip" android:text="@string/hour_data" style="@style/main_tab_bottom" android:textSize="16sp"/>
    </RadioGroup>
    
    <LinearLayout
    	android:layout_width="wrap_content"
   		android:layout_height="wrap_content"
    	android:orientation="vertical"
    	android:layout_marginLeft="10dp"
    	android:layout_marginRight="10dp"
    	android:layout_marginTop="0dp">
	    <ListView
	        android:id="@+id/monitor_list"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content">
	    </ListView>
   	</LinearLayout>
   	
</LinearLayout>
