<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/station_info_bg"
    android:id="@+id/air_check_layout"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/shishiaqixiangqing"
            android:textColor="@color/white"
            android:textSize="18sp"/>
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:id="@+id/station_name" />

    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="5dp"
        android:orientation="horizontal">
        <TextView
        	android:layout_width="100dp"
        	android:layout_height="wrap_content"
        	android:gravity="end"
        	android:textColor="@color/white"
        	android:textSize="@dimen/station_info_font_size"
        	android:text="@string/aqizhishu" />
        <TextView
            android:layout_height="wrap_content"
        	android:layout_width="150dp"
        	android:layout_marginLeft="20dp"
        	android:layout_gravity="start"
        	android:textColor="@color/white"
        	android:textSize="@dimen/station_info_font_size"
        	android:id="@+id/aqi_number" />
    </LinearLayout>
    
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="5dp"
        android:orientation="horizontal">
        <TextView
        	android:layout_width="100dp"
        	android:layout_height="wrap_content"
        	android:gravity="end"
        	android:textColor="@color/white"
        	android:textSize="@dimen/station_info_font_size"
        	android:text="@string/kongqizhiliangjibie" />
        <TextView
            android:layout_height="wrap_content"
        	android:layout_width="150dp"
        	android:layout_marginLeft="20dp"
        	android:layout_gravity="start"
        	android:textColor="@color/white"
        	android:textSize="@dimen/station_info_font_size"
        	android:id="@+id/aqi_level" />
    </LinearLayout>

    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="5dp"
        android:orientation="horizontal">
        <TextView
        	android:layout_width="100dp"
        	android:layout_height="wrap_content"
        	android:gravity="end"
        	android:textColor="@color/white"
        	android:textSize="@dimen/station_info_font_size"
        	android:text="@string/shouyaowuranwu" />
        <TextView
            android:layout_height="wrap_content"
        	android:layout_width="150dp"
        	android:layout_marginLeft="20dp"
        	android:layout_gravity="start"
        	android:textColor="@color/white"
        	android:textSize="@dimen/station_info_font_size"
        	android:id="@+id/aqi_source" />
    </LinearLayout>
    
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="5dp"
        android:orientation="horizontal">
        <TextView
        	android:layout_width="100dp"
        	android:layout_height="wrap_content"
        	android:gravity="end"
        	android:textColor="@color/white"
        	android:textSize="@dimen/station_info_font_size"
        	android:text="@string/jiankangzhiyin" />
        <TextView
            android:layout_height="wrap_content"
        	android:layout_width="150dp"
        	android:layout_marginLeft="20dp"
        	android:layout_gravity="start"
        	android:textColor="@color/white"
        	android:textSize="@dimen/station_info_font_size"
        	android:id="@+id/health_guide" />
    </LinearLayout>
    
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="5dp"
        android:orientation="horizontal">
        <TextView
        	android:layout_width="100dp"
        	android:layout_height="wrap_content"
        	android:gravity="end"
        	android:textColor="@color/white"
        	android:textSize="@dimen/station_info_font_size"
        	android:text="@string/jianyicuoshi" />
        <TextView
            android:layout_height="wrap_content"
        	android:layout_width="150dp"
        	android:layout_marginLeft="20dp"
        	android:layout_gravity="start"
        	android:textColor="@color/white"
        	android:textSize="@dimen/station_info_font_size"
        	android:id="@+id/recommended_measure" />
    </LinearLayout>
    
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="5dp"
        android:orientation="horizontal">
        <TextView
        	android:layout_width="100dp"
        	android:layout_height="wrap_content"
        	android:gravity="end"
        	android:textColor="@color/white"
        	android:textSize="@dimen/station_info_font_size"
        	android:text="@string/jianceshijian" />
        <TextView
            android:layout_height="wrap_content"
        	android:layout_width="150dp"
        	android:layout_marginLeft="20dp"
        	android:layout_gravity="start"
        	android:textColor="@color/white"
        	android:textSize="@dimen/station_info_font_size"
        	android:id="@+id/air_check_time" />
    </LinearLayout>
    
    <LinearLayout android:layout_height="60dp"
        android:layout_width="fill_parent">
        
    </LinearLayout>
</LinearLayout>
